--- a/Counter/style.css
+++ b/Counter/style.css
@@ -12,7 +12,15 @@
 }
 
 #Clear {
-    font-size: 2.5em;
+    font-size: 3em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    color: white;
+
+
+    border: none;
+    border-radius: 20px;
+    padding: 5px 30px;
 }
 
 #Count {
