--- a/Counter/style.css
+++ b/Counter/style.css
@@ -1,30 +1,62 @@
+div {
+    background-image: linear-gradient(#7139ff,#7027a0);
 
-#Add {
-    font-size: 8em;
-    font-family: fantasy;
-    color: white;
+    position: relative;
 
-    background-color: #A3B3F7;
+    margin: auto;
 
-    border: none;
-    border-radius: 20px;
-    padding: 1px 40px;
+    border-radius: 10px;
+
+    height: 425px;
+    max-width: 300px;
 }
 
-#Clear {
-    font-size: 3em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    color: white;
 
+h1 {
+    background-color: antiquewhite;
+    text-align: center;
 
-    border: none;
-    border-radius: 20px;
-    padding: 5px 30px;
+    border-radius: 10px;
 }
 
 #Count {
-    font-size: 8em;
+    color: white;
+    text-shadow: 3px 3px black;
+    
+    margin: auto;
+
+    font-size: 55vmin;
+    text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #374b9a;
+    
+}
+
+#Add {
+    background-color: white;
+
+    margin: auto;
+    position: relative;
+    border-radius: 15px;
+
+    left: 25%;
+
+    font-size: 100px;
+    width: 50%;
+
+}
+
+#Clear {
+    background-image: linear-gradient(#ff4339,#b52323);
+
+    margin: auto;
+    position: absolute;
+
+    z-index: inherit;
+    left: 100px;
+    bottom: 0px;
+
+    border-radius: 5px;
+
+    font-size: x-large;
+    
 }
